# teste_socket

./: main.py  pyproject.toml
